styling header and headline

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     veniam repellendus iusto sunt architecto est ducimus, voluptas recusandae magnam porro ratione optio
                     neque, maxime dolorem culpa.
                 </p>
-                <button>
+                <button class="sign-up-headline">
                     Sign up
                 </button>
             </div>
