--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
             Header Logo
         </div>
         <ul class="header-link">
-            <li>header link one</li>
-            <li>header link two</li>
-            <li>header link three</li>
+            <li><a href="#">header link one</a></li>
+            <li><a href="#">header link two</a></li>
+            <li><a href="#">header link three</a></li>
         </ul>
     </header>
     <div class="content">
@@ -47,25 +47,25 @@
                     <div class="card-image">
 
                     </div>
-                    <p>subtext under an illustration or image</p>
+                    subtext under an illustration or image
                 </div>
                 <div class="card">
                     <div class="card-image">
 
                     </div>
-                    <p>subtext under an illustration or image</p>
+                    subtext under an illustration or image
                 </div>
                 <div class="card">
                     <div class="card-image">
 
                     </div>
-                    <p>subtext under an illustration or image</p>
+                    subtext under an illustration or image
                 </div>
                 <div class="card">
                     <div class="card-image">
 
                     </div>
-                    <p>subtext under an illustration or image</p>
+                    subtext under an illustration or image
                 </div>
             </div>
         </div>
