styling quote section

--- a/index.html
+++ b/index.html
@@ -70,14 +70,15 @@
             </div>
         </div>
         <div class="quotes">
-            <p>
+            <p class="quote">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus, qui vel laboriosam facilis eveniet
                 accusantium, quasi veniam quidem iure a omnis? Commodi aspernatur assumenda eius velit eveniet doloribus
                 doloremque. Repellendus.
             </p>
-            <p>
+            <span class="quote-by">
                 -Tsun Tzu
-            </p>
+            </span>
+
         </div>
         <div class="sign-up">
             <div class="left">
