styling sign-up section

--- a/index.html
+++ b/index.html
@@ -81,18 +81,21 @@
 
         </div>
         <div class="sign-up">
-            <div class="left">
-                <h4>
-                    Call to action, it's time!
-                </h4>
-                <p>
-                    Sign up for our product by clicking that button over there!
-                </p>
-            </div>
-            <div class="right">
-                <Button>
-                    Sign Up
-                </Button>
+            <div class="container">
+                <div class="left">
+                    <h4>
+                        Call to action, it's time!
+                    </h4>
+                    <div class="offer">
+                        Sign up for our product by clicking that button over there!
+                    </div>
+
+                </div>
+                <div class="right">
+                    <Button class="sign-up-offer">
+                        Sign Up
+                    </Button>
+                </div>
             </div>
         </div>
     </div>
